--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "express-session": "^1.17.1",
     "express-toastr": "^2.0.2",
     "express-validator": "^6.1.1",
+    "file-base64": "^1.0.0",
     "fs": "0.0.1-security",
     "get-json": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "loader": "^2.1.1",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "pdfkit": "^0.10.0",
     "push.js": "^1.0.9",
